adding a simple mecanism of dependency injection

--- a/dummy-watch/core-lookup/pom.xml
+++ b/dummy-watch/core-lookup/pom.xml
@@ -8,9 +8,9 @@
     <version>0.0.1-SNAPSHOT</version>
   </parent>
   <groupId>afia.nabil</groupId>
-  <artifactId>gui</artifactId>
+  <artifactId>core-lookup</artifactId>
   <version>0.0.1-SNAPSHOT</version>
-  <name>gui</name>
+  <name>core-lookup</name>
   <url>http://maven.apache.org</url>
   <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
@@ -21,18 +21,6 @@
       <artifactId>junit</artifactId>
       <version>3.8.1</version>
       <scope>test</scope>
-    </dependency>
-    
-    <dependency>
-		<groupId>afia.nabil</groupId>
- 		<artifactId>core-lookup</artifactId>
-  		<version>0.0.1-SNAPSHOT</version>
-	</dependency>
-
-    <dependency>
-    	<groupId>afia.nabil</groupId>
-    	<artifactId>time-service</artifactId>
-    	<version>0.0.1-SNAPSHOT</version>
     </dependency>
   </dependencies>
 </project>
