--- a/dummy-watch/timer-service-impl/pom.xml
+++ b/dummy-watch/timer-service-impl/pom.xml
@@ -27,5 +27,10 @@
 		  <artifactId>time-service</artifactId>
 		  <version>0.0.1-SNAPSHOT</version>
     </dependency>
+    <dependency>
+    	<groupId>afia.nabil</groupId>
+    	<artifactId>core-lookup</artifactId>
+    	<version>0.0.1-SNAPSHOT</version>
+    </dependency>
   </dependencies>
 </project>
