--- a/dummy-watch/launcher/pom.xml
+++ b/dummy-watch/launcher/pom.xml
@@ -60,6 +60,11 @@
   <artifactId>TimeServiceWithDelegation</artifactId>
   <version>0.0.1-SNAPSHOT</version>
 	</dependency>
-	
+
+	<dependency>
+		<groupId>afia.nabil</groupId>
+		<artifactId>state</artifactId>
+		<version>0.0.1-SNAPSHOT</version>
+	</dependency>
   </dependencies>
 </project>
